# cloudstore

./: .env.backup  .env.example  .gitignore  PROJECT_PLAN.md  README.md  SRS.md  alembic.ini  configure_users.sh  main.py  pyproject.toml  requirements.txt  setup.py  setup_postgres.sh  update_proxy_credentials.sh
alembic/versions/: 20250531_074101_1e7863c0144a_initial_migration_with_all_models.py
alembic_backup/: env.py
api/endpoints/: aliexpress.py  ebay.py  shopgoodwill.py
cloudstore/: __init__.py
cloudstore/analysis/: __init__.py
cloudstore/api/: __init__.py  deps.py
cloudstore/api/routes/: __init__.py  arbitrage.py  price_history.py  products.py  proxy.py  site.py
cloudstore/core/: __init__.py  config.py
cloudstore/crawlers/: __init__.py
cloudstore/database/: __init__.py  config.py  init_db.py  models.py
cloudstore/database/migrations/: env.py
cloudstore/database/migrations/versions/: 20250531_032650_4151b901d491_initial_migration.py  __init__.py
cloudstore/proxy/: __init__.py
cloudstore/schemas/: __init__.py  arbitrage.py  base.py  price.py  product.py  proxy.py  site.py
cloudstore/scripts/: init_db_config.py  init_proxy_config.py
crawlers/aliexpress/: constants.py  crawler.py  models.py  parser.py
crawlers/amazon/: constants.py  models.py
crawlers/ebay/: api.py  constants.py  models.py
crawlers/ebay/tests/: test_api.py
crawlers/shopgoodwill/: __init__.py  constants.py  crawler.py  parser.py
crawlers/shopgoodwill/tests/: conftest.py  test_crawler.py
docs/: DOCUMENTATION_RULE.md
(+3 files in other folders)
